modified overflow to avoid unnecessary scrolling in the x direction on mobile

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
 
 .content {
     background-color: var(--white);
-    overflow: scroll;
+    overflow: hidden;
     border: 1rem solid var(--green);
     border-radius: 5rem;
 }
